Fix minor text errors

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,5 @@
 xinput_calibrator 0.7.6 [2019-01-24]
-* Add support for xinput "libinput Calibration Matrix"
+* Add support for xinput "libinput Calibration Matrix" for event devices
 
 xinput_calibrator 0.7.5 [2010-09-12]
 Major features:
